--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,12 @@ sudo: false
 language: node_js
 node_js:
   - 'stable'
-script:
+before_script:
   - npm run build
-  - start-stop-daemon --start -p .pid -b -m -a $(which http-server) -- (readlink -e .)
+  - start-stop-daemon --start -b -a $(which http-server) -- (readlink -e .)
+  - sleep 1
+script:
   - node selenium-test.js
-  - start-stop-daemon --stop -p .pid
 addons:
   sauce_connect:
     username: 'derhuerst'
