Firefox, Safari :sparkles:

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,10 @@ before_script:
   - sleep 1
 script:
   - node selenium-test.js
+env:
+  - BROWSER=chrome PLATFORM="Windows 10"
+  - BROWSER=firefox PLATFORM="Windows 10"
+  - BROWSER=safari PLATFORM="macOS 10.12"
 addons:
   sauce_connect:
     username: 'derhuerst'
