--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"es2020": "^1.1.9",
 		"uglify-js": "^2.7.5",
 		"http-server": "^0.9.0",
+		"firefox-profile": "^0.4.6",
 		"webdriverio": "^4.6.1",
 		"so": "^1.0.1"
 	},
