--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
 	"devDependencies": {
 		"browserify": "^13.1.1",
 		"es2020": "^1.1.9",
-		"uglify-js": "^2.7.5"
+		"uglify-js": "^2.7.5",
+		"http-server": "^0.9.0",
+		"webdriverio": "^4.6.1",
+		"so": "^1.0.1"
 	},
 	"scripts": {
 		"bundle": "browserify --standalone onPrint -t es2020 index.js > build/window-on-print.js",
