--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
 	"name":        "window-on-print",
 	"description": "Reliably detect when the user prints.",
 	"version":     "0.1.1",
-	"main":        "index.js",
-	"files":       ["index.js"],
+	"main": "./dist/index.js",
+	"module": "./index.js",
+	"files": [
+		"index.js",
+		"dist"
+	],
 	"keywords":    ["print", "event", "window", "onbeforeprint"],
 	"author":      "Jannis R <mail@jannisr.de>",
 	"homepage":    "http://derhuerst.github.io/window-on-print/",
@@ -12,16 +16,11 @@
 	"license":     "ISC",
 	"engines":     {"node": ">=6"},
 	"devDependencies": {
-		"browserify": "^13.1.1",
-		"es2020": "^1.1.9",
-		"uglify-js": "^2.7.5",
-		"http-server": "^0.9.0",
-		"webdriverio": "^4.6.1",
-		"so": "^1.0.1"
+		"babel-cli": "^6.24.1",
+		"babel-preset-es2015": "^6.24.1"
 	},
 	"scripts": {
-		"bundle": "browserify --standalone onPrint -t es2020 index.js > build/window-on-print.js",
-		"minify": "cat build/window-on-print.js | uglifyjs -mc > build/window-on-print.min.js",
-		"build": "npm run bundle && npm run minify"
+		"build": "babel index.js --presets es2015 --out-dir dist",
+		"prepublishOnly": "npm run build"
 	}
 }
