--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
 	"engines":     {"node": ">=6"},
 	"devDependencies": {
 		"babel-cli": "^6.24.1",
-		"babel-preset-es2015": "^6.24.1"
+		"babel-preset-es2015": "^6.24.1",
+		"http-server": "^0.10.0",
+		"so": "^1.0.1",
+		"webdriverio": "^4.8.0"
 	},
 	"scripts": {
 		"build": "babel index.js --presets es2015 --out-dir dist",
