--- a/package.json
+++ b/package.json
@@ -17,14 +17,14 @@
 	"engines":     {"node": ">=6"},
 	"devDependencies": {
 		"babel-cli": "^6.24.1",
-		"babel-preset-es2015": "^6.24.1",
-		"browserify": "^14.4.0",
-		"http-server": "^0.10.0",
+		"babel-preset-env": "^1.7.0",
+		"browserify": "^16.2.2",
+		"serve": "^9.4.0",
 		"so": "^1.0.1",
 		"webdriverio": "^4.8.0"
 	},
 	"scripts": {
-		"build": "babel index.js --presets es2015 --out-dir dist",
+		"build": "babel index.js --presets env --out-dir dist",
 		"test-bundle": "browserify -s onPrint dist/index.js >dist/bundle.js",
 		"test-run": "node selenium-test.js",
 		"test": "npm run test-bundle && npm run test-run",
